--- a/src/main/resources/templates/collection.html
+++ b/src/main/resources/templates/collection.html
@@ -73,7 +73,7 @@
             />
           </a>
           <div class="w-full px-2 border-2 bd-slate-100 bg-slate-50">
-            <div class="flex flex-row w-full h-auto py-1 text-sm">
+            <div class="flex flex-row justify-between w-full h-auto py-1 text-sm">
               <ul class="flex flex-row justify-start items-center pr-2">
 
 
@@ -107,6 +107,15 @@
                   <span class="font-thin" th:text="${collection.commentCount}"></span>
                 </li>
               </ul>
+
+
+              <!-- COMMENT BOX EXIT -->
+              <div>
+                <a
+                  class="collectionCommentBoxExit flex-row justify-end items-center pr-2 hidden">
+                  <span class="font-semibold">X</span>
+                </a>
+              </div>
             </div>
 
             <div class="w-full h-auto flex justify-start items-center text-sm">
