--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -181,13 +181,15 @@
 
                     <li class="flex flex-row justify-start items-center pr-2">
                       <a
+                        th:if="${collection.id != null}" th:id="'commentToggle-' + ${collection.id}"
                         class="commentToggle cursor-pointer"
                         th:attr="data-collection-id=${collection.id}"
                         onclick="passCollectionId(this.getAttribute('data-collection-id'))"
                         >
                         <!-- onclick trigger the comment activity box to have the collection id -->
-                        <span class="collectionCommentButton pr-2 font-medium"
-
+                        <span 
+                        th:id="'collectionCommentButton-' + ${collection.id}"
+                          class="collectionCommentButton pr-2 font-medium"
                         >
                           comment
                         </span>
@@ -196,13 +198,18 @@
                     </li>
                   </ul>
                 </div>
+
                 <!-- COMMENT BOX EXIT -->
-                <div class="collectionCommentBoxExit hidden">
+                <div 
+                  th:id="'collectionCommentBoxExit-' + ${collection.id}"
+                  class="collectionCommentBoxExit hidden">
                   <a>
                     <span class="font-semibold">X</span>
                   </a>
                 </div>
               </div>
+
+              
               <div>
                 <div
                   class="w-full h-auto flex justify-start items-center text-sm"
@@ -245,6 +252,7 @@
 
             <!-- COLLECTION COMMENT BOX -->
             <div
+              th:id="'collectionCommentBox-' + ${collection.id}"
               class="collectionCommentBox hidden mt-2"
               th:attr="data-collection-id=${collection.id}"
             >
