--- a/src/main/resources/static/css/input.css
+++ b/src/main/resources/static/css/input.css
@@ -22,13 +22,13 @@
   }
   
   footer {
-    position: fixed; /* Fix the footer to the bottom of the viewport */
-    bottom: 0; /* Align it to the bottom */
+    position: fixed;
+    bottom: 0;
     left: 0;
-    width: 100%; /* Full width of the viewport */
-    z-index: 1000; /* Ensure it stays above other elements */
-    background-color: white; /* Optional: Set a background color */
-    box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1); /* Optional: Add a shadow for better visibility */
+    width: 100%;
+    z-index: 9999; /* Higher than the fullscreen class */
+    background-color: white;
+    box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
   }
 
   body#scrollablePage{
@@ -44,14 +44,20 @@
 @layer components {
 
   .fullscreen {
-    position: fixed;
-    margin-top: 48px;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: white; /* Adjust as needed */
-    overflow: hidden;
+    position: fixed !important;
+    margin-top: 48px !important;
+    top: 0 !important;
+    left: 0 !important;
+    width: 100vw !important;
+    height: 100vh !important;
+    z-index: 8888 !important;
+    background-color: rgba(255, 255, 255) !important;
+  }
+
+
+  .collectionContainer {
+    position: relative; /* Ensure z-index works */
+    z-index: 1; /* Default stack order */
   }
 
   .truncate {
@@ -184,7 +190,7 @@
   .headerImage {
     @apply w-20 h-20 rounded-full;
   }
-  
+
 }
 
 @layer utilities {
