--- a/src/main/resources/static/css/output.css
+++ b/src/main/resources/static/css/output.css
@@ -802,18 +802,13 @@ header {
 
 footer {
   position: fixed;
-  /* Fix the footer to the bottom of the viewport */
   bottom: 0;
-  /* Align it to the bottom */
   left: 0;
   width: 100%;
-  /* Full width of the viewport */
-  z-index: 1000;
-  /* Ensure it stays above other elements */
+  z-index: 9999;
+  /* Higher than the fullscreen class */
   background-color: white;
-  /* Optional: Set a background color */
   box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
-  /* Optional: Add a shadow for better visibility */
 }
 
 body#scrollablePage {
@@ -863,15 +858,28 @@ body {
 }
 
 .fullscreen {
-  position: fixed;
-  margin-top: 48px;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: white;
-  /* Adjust as needed */
-  overflow: hidden;
+  position: fixed !important;
+  margin-top: 48px !important;
+  top: 0 !important;
+  left: 0 !important;
+  width: 100vw !important;
+  height: 100vh !important;
+  z-index: 8888 !important;
+  background-color: rgba(255, 255, 255) !important;
+}
+
+.\!collectionContainer {
+  position: relative !important;
+  /* Ensure z-index works */
+  z-index: 1 !important;
+  /* Default stack order */
+}
+
+.collectionContainer {
+  position: relative;
+  /* Ensure z-index works */
+  z-index: 1;
+  /* Default stack order */
 }
 
 .truncate {
@@ -1604,6 +1612,10 @@ body {
 
 .mt-8 {
   margin-top: 2rem;
+}
+
+.block {
+  display: block;
 }
 
 .flex {
