--- a/src/main/resources/templates/item.html
+++ b/src/main/resources/templates/item.html
@@ -8,7 +8,8 @@
     <script src="/js/toggleTruncate.js" defer></script>
     <script src="/js/toggleOverlay.js" defer></script>
     <script src="/js/windowOpen.js" defer></script>
-    <script src="/js/toggleCommentBox.js" defer></script>
+    <script src="/js/toggleCommentBoxItem.js" defer></script>
+    <script src="/js/commentBoxOpen.js" defer></script>
     <script src="/js/toggleReply.js" defer></script>
   </head>
 
@@ -125,7 +126,7 @@
           </div>
 
           <div class="w-full px-2 bg-white">
-            <div class="flex flex-row w-full h-auto py-1 text-sm">
+            <div class="flex flex-row justify-between w-full h-auto py-1 text-sm">
               <ul class="flex flex-row justify-start items-center pr-2">
 
 
@@ -163,7 +164,7 @@
               <!-- COMMENT BOX EXIT -->
               <div>
                 <a
-                  class="collectionCommentBoxExit flex-row justify-end items-center pr-2 hidden">
+                class="collectionCommentBoxExit flex-row justify-end items-center pr-2 hidden">
                   <span class="font-semibold">X</span>
                 </a>
               </div>
@@ -341,7 +342,7 @@
         <div id="commentActivity" class="commentNav hidden">
           <div id="commentInputContainer" class="w-full">
             <form
-              th:action="@{/items/{itemId}/comments (itemId=${item.id})}"
+              th:action="@{/items/{itemId}/comments(itemId=${item.id})}"
               method="post"
               class="flex flex-row w-full items-center justify-center px-2 bg-white"
             >
