--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -326,27 +326,30 @@
                 </div>
                 <!-- Like Box -->
                 <div
-                  id="likeBox"
-                  class="flex flex-col justify-start items-center"
-                >
+                th:id="'likeBox-' + ${comment.id}"
+                class="flex flex-col justify-start items-center"
+              >
                   <div class="flex flex-row justify-center items-center">
-                    <a>
-                      <span
+                    <form th:if="${comment?.id != null}" th:action="@{/comments/{id}/like(id=${comment?.id})}" method="post">
+                      <input type="hidden" name="commentId" th:value="${comment.id}" />
+                      <input type="hidden" name="userId" th:value="${user.id}" />
+                      <input type="hidden" name="liked" th:value="${comment.isLiked}" />
+                      <button type="submit" class="likeButton" th:if="${comment.user != null && comment.user.id != user.id}">
+                        <span style="font-size: 10px; line-height: 1" class="font-medium text-xs" th:if="${comment.isLiked}">&#9829;</span>
+                        <span style="font-size: 10px; line-height: 1" class="font-medium text-xs" th:if="${!comment.isLiked}">&#9825;</span>
+                      </button>
+                      <button th:id="'like-button-' + ${comment.id}" type="button" class="likeButton" th:if="${comment.user != null && comment.user.id == user.id}" disabled>
+                        <span style="font-size: 10px; line-height: 1" class="font-medium text-xs">&#9829;</span>
+                      </button>
+                    </form>
+                  </div>
+  
+                  <div class="flex flex-row justify-center items-center">
+                    <p  th:id="'likeCount-' + ${comment.id}"
                         style="font-size: 10px; line-height: 1"
-                        class="font-medium text-xs"
-                      >
-                        &#9825;
-                      </span>
-                    </a>
+                        class="font-thin text-xs" th:text="${comment.likeCount != null ? comment.likeCount : '0'}"></p>
                   </div>
-                  <div class="flex flex-row justify-center items-center">
-                    <p
-                      style="font-size: 10px; line-height: 1"
-                      class="font-thin text-xs"
-                    >
-                      0
-                    </p>
-                  </div>
+  
                 </div>
               </div>
 
