--- a/src/main/resources/templates/item.html
+++ b/src/main/resources/templates/item.html
@@ -38,7 +38,7 @@
       </nav>
     </header>
 
-    <div th:id="'item-' + ${item.id}" class="profileContainerScroll overflow-hidden bg-slate-200">
+    <div th:id="'item-' + ${item.id}" class="profileContainerScroll bg-slate-200">
       <div class="h-auto w-full bg-white">
         <div class="collectionNavbar shadow-sm">
           <div class="flex justify-between items-center w-full">
@@ -221,8 +221,9 @@
           <!-- Comment Template -->
           <div class="px-3 pt-1 pb-2" th:each="comment : ${item.comments}">
             <div
-              class="w-full h-auto flex flex-row justify-start items-start text-sm"
-            >
+              th:id="'comment-' + ${comment.id}"
+              class="w-full h-auto flex flex-col justify-start items-start">
+            <div class="w-full flex flex-row justify-start items-start" >
               <!-- Profile Picture -->
               <div id="imageBoxComment" class="flex-shrink-0 w-10">
                 <a href="/profile/{comment.user.id}">
@@ -285,29 +286,35 @@
 
 
             </div>
+
             <!-- Like Box -->
             <div
-              id="likeBox"
+              th:id="'likeBox-' + ${comment.id}"
               class="flex flex-col justify-start items-center"
             >
-              <div class="flex flex-row justify-center items-center">
-                <a>
-                  <span
-                    style="font-size: 10px; line-height: 1"
-                    class="font-medium text-xs"
-                  >
-                    &#9825;
-                  </span>
-                </a>
+                <div class="flex flex-row justify-center items-center">
+                  <form th:if="${comment?.id != null}" th:action="@{/comments/{id}/like(id=${comment?.id})}" method="post">
+                    <input type="hidden" name="commentId" th:value="${comment.id}" />
+                    <input type="hidden" name="userId" th:value="${user.id}" />
+                    <input type="hidden" name="liked" th:value="${comment.isLiked}" />
+                    <button type="submit" class="likeButton" th:if="${comment.user != null && comment.user.id != user.id}">
+                      <span style="font-size: 10px; line-height: 1" class="font-medium text-xs" th:if="${comment.isLiked}">&#9829;</span>
+                      <span style="font-size: 10px; line-height: 1" class="font-medium text-xs" th:if="${!comment.isLiked}">&#9825;</span>
+                    </button>
+                    <button th:id="'like-button-' + ${comment.id}" type="button" class="likeButton" th:if="${comment.user != null && comment.user.id == user.id}" disabled>
+                      <span style="font-size: 10px; line-height: 1" class="font-medium text-xs">&#9829;</span>
+                    </button>
+                  </form>
+                </div>
+
+                <div class="flex flex-row justify-center items-center">
+                  <p  id="'likeCount' + ${comment.id}"
+                      style="font-size: 10px; line-height: 1"
+                      class="font-thin text-xs" th:text="${comment.likeCount}"></p>
+                </div>
+
               </div>
-              <div class="flex flex-row justify-center items-center">
-                <p
-                  style="font-size: 10px; line-height: 1"
-                  class="font-thin text-xs"
-                >
-                  0
-                </p>
-              </div>
+            </div>
             </div>
           </div>
         </div>
