--- a/src/main/resources/templates/followersList.html
+++ b/src/main/resources/templates/followersList.html
@@ -4,13 +4,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>User Following</title>
     <link rel="stylesheet" href="/css/output.css" />
+    <script src="/js/visitedPages.js" defer></script>
+    <script src="/js/backButton.js"></script>
   </head>
   <body>
     <header>
       <nav class="navbar">
         <ul class="flex justify-between w-full">
           <li class="flex items-center">
-            <a th:href="@{/profile/{id}(id=${userProfile.id})}">
+            <a id="backButton">
               <span>&#8592;</span>
             </a>
           </li>
