--- a/src/main/resources/templates/createCollection.html
+++ b/src/main/resources/templates/createCollection.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Login</title>
+    <script src="/js/visitedPages.js" defer></script>
     <script th:src="@{/js/previewFile.js}" defer></script>
+    <script src="/js/backButton.js"></script>
 
     <link rel="stylesheet" href="/css/output.css" />
   </head>
@@ -15,7 +17,7 @@
       <nav class="navbar">
         <ul class="flex justify-between items-center w-full">
           <li class="flex items-center">
-            <a href="/index">
+            <a id="backButton">
               <span>&#8592;</span>
             </a>
           </li>
