--- a/src/main/resources/templates/updateUserDetails.html
+++ b/src/main/resources/templates/updateUserDetails.html
@@ -4,17 +4,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>User Profile</title>
     <link rel="stylesheet" th:href="@{/css/output.css}" />
+    <script src="/js/visitedPages.js" defer></script>
     <script th:src="@{/js/accountDetails.js}" defer></script>
     <script th:src="@{/js/toggleProfilePhoto.js}" defer></script>
     <script th:src="@{/js/fadeAnimations.js}" defer></script>
     <script th:src="@{/js/updateChanges.js}" defer></script>
+    <script src="/js/backButton.js"></script>
   </head>
   <body>
     <header>
       <nav class="navbar">
         <ul class="flex justify-between items-center w-full">
           <li class="flex">
-            <a href="/profile">
+            <a id="backButton">
               <span>&#8592;</span>
             </a>
           </li>
